// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<DropdownOverlay
  className="big-spacer-left"
  noPadding={true}
  placement="top-left"
>
  <ul
    className="padded source-viewer-bubble-popup nowrap"
  >
    <ActionsDropdownItem
      copyValue="http://localhost/code?id=prj&branch=feature&selected=foo&line=10"
    >
      component_viewer.copy_permalink
    </ActionsDropdownItem>
  </ul>
</DropdownOverlay>
`;

exports[`should render correctly: first line 1`] = `
<DropdownOverlay
  className="big-spacer-left"
  noPadding={true}
  placement="bottom-left"
>
  <ul
    className="padded source-viewer-bubble-popup nowrap"
  >
    <ActionsDropdownItem
      copyValue="http://localhost/code?id=prj&branch=feature&selected=foo&line=2"
    >
      component_viewer.copy_permalink
    </ActionsDropdownItem>
  </ul>
</DropdownOverlay>
`;
